# project-flask-base

./: README.md  deploy.sh  pyproject.toml  requirements.txt
docker/: docker-compose.middleware.yaml  middleware.env
flask_init_env/: .env  flask_tool.py
flask_init_env/config/: default_config.py
flaskr/: main.py
flaskr/config/: default_config.py  redis_constant.py
flaskr/constant/: http_enum.py  task_status_enum.py
flaskr/entity/: recognition_entity.py  task_entity.py
flaskr/repository/: recognition_repository.py  task_repository.py
flaskr/route/: recognition_routes.py
flaskr/schema/: recognition_schema.py
flaskr/service/: b_recognition_service.py  b_task_service.py  callback_service.py  schedule_service.py
flaskr/tool/: auth_tool.py  env_tool.py  flask_tool.py  json_tool.py  mysql_tool.py  redis_tool.py  request_escher_tool.py  request_tool.py  time_tool.py
