# PEP 621: https://peps.python.org/pep-0621
[project]
name = "flaskr"
version = "1.0.0"
description = "PDF parsing and recognition service"
dependencies = [
    "flask ~= 3.1.0",
    "flask-sqlalchemy ~= 3.1.1",
    "pymysql ~= 1.1.1",
    "flask-redis ~= 0.4.0",
    "nacos-sdk-python ~= 2.0.3",
    "PyYAML ~= 6.0.2",
    "snowflake-id ~= 1.0.2",
    "flask-apscheduler ~= 1.13.1",
    "requests ~= 2.32.3",
    "asgiref ~= 3.8.1",
    "uvicorn ~= 0.34.0",
    "pydantic ~= 2.11.1",
    "numpy ~= 1.26.4"
]
requires-python = ">=3.11,<3.13"

[project.optional-dependencies]
dev = ["pytest ~= 8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"